<resources>
    <string name="app_name">ProjectAndroid</string>
    <string name="registration">Registration</string>
    <string name="firt_name">Firt Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="rember_me">Rember me</string>
    <string name="login">Login</string>
    <string name="sing_in">Sing in</string>
    <string name="i_already_have_an_account">I already have an account?</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="delete">Delete</string>
</resources>